Build: Initial port to 1.21
Still needs some verifying as well as a whole new Component API, but the game runs.